src/test/ui/rfc-2632-const-trait-impl/cross-crate.stock.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/cross-crate.rs:15:5
   |
LL |     NonConst.func();
   |     ^^^^^^^^^^^^^^^

error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/cross-crate.rs:17:5
   |
LL |     Const.func();
   |     ^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
